fixed not visible icon bug

--- a/styles.css
+++ b/styles.css
@@ -253,7 +253,7 @@ td {
   margin-top: 10px;
   border: 3px solid black;
 
-  background-image: url("/icons/excel-icon.png");
+  background-image: url("./icons/excel-icon.png");
   background-size: 32px 32px;
   background-repeat: no-repeat;
   background-position: right;
